--- a/.github/workflows/FILE_NAME.yml
+++ b/.github/workflows/FILE_NAME.yml
@@ -1,53 +1,39 @@
-# GitHub 操作，用于生成一个贡献图，其中有一条蛇吃掉了你的贡献。
-
-name: Generate Snake
-
-# 控制操作何时运行。此操作每 6 小时运行一次。
+name: generate animation
 
 on:
+  # run automatically every 6 hours
   schedule:
-      # every 6 hours
-    - cron: "0 */6 * * *"
-
-# 此命令允许我们从“操作”选项卡自动运行“操作”
+    - cron: "0 */8 * * *" 
+  
+  # allows to manually run the job at any time
   workflow_dispatch:
+  
+  # run on every push on the master branch
+  push:
+    branches:
+    - master
+    
+  
 
-# 此工作流中的运行顺序：
 jobs:
-  # 此工作流包含一个名为“生成”的作业
-  build:
-    # 作业将在其上运行的运行器类型
+  generate:
     runs-on: ubuntu-latest
-
-    # 步骤表示将作为作业的一部分执行的一系列任务
+    timeout-minutes: 10
+    
     steps:
-
-    # 在 $GITHUB_WORKSHOP 下检查存储库，以便您的作业可以访问它
-      - uses: actions/checkout@v2
-
-    # Generates the snake  
-      - uses: Platane/snk@master
-        id: snake-gif
+      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
+      - name: generate github-contribution-grid-snake.svg
+        uses: Platane/snk/svg-only@v2
         with:
-          github_user_name: PlayGuitar-CoderQ
-          # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
-          gif_out_path: dist/github-contribution-grid-snake.gif
-          svg_out_path: dist/github-contribution-grid-snake.svg?palette=github-dark
-
-     # show the status of the build. Makes it easier for debugging (if there's any issues).
-      - run: git status
-
-      # Push the changes
-      - name: Push changes
-        uses: ad-m/github-push-action@master
+          github_user_name: ${{ github.repository_owner }}
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+      # push the content of <build_dir> to a branch
+      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
+      - name: push github-contribution-grid-snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v2.6.0
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
-          force: true
-
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
-        with:
-          # the output branch we mentioned above
           target_branch: output
           build_dir: dist
         env:
